--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "slugify": "^1.6.6",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "eslint": "^8",
